Working sample mvn webapp w/Jetty.

--- a/my-webapp/pom.xml
+++ b/my-webapp/pom.xml
@@ -17,10 +17,12 @@
   </dependencies>
   <build>
     <finalName>my-webapp</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
-  <plugin>
-    <groupId>org.eclipse.jetty</groupId>
-    <artifactId>jetty-maven-plugin</artifactId>
-    <version>${project.version}</version>
-  </plugin>
+
 </project>
