--- a/my-webapp02/pom.xml
+++ b/my-webapp02/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>my-webapp02 Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <cxf.version>2.7.6</cxf.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,6 +17,22 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-frontend-jaxws</artifactId>
+        <version>${cxf.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-http</artifactId>
+        <version>${cxf.version}</version>
+    </dependency>
+        <!-- Jetty is needed if you're are not using the CXFServlet -->
+    <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-http-jetty</artifactId>
+        <version>${cxf.version}</version>
+    </dependency>    
   </dependencies>
   <build>
     <finalName>my-webapp02</finalName>
